# libtex

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE.md  README.md  libtex.pc.in  meson.build  tex.pc.in  texconf.h.in  texio.pc.in
.github/workflows/: cmake.yml  macos.yml  windows.yml
cmake/: FindJSON-C.cmake  FindLibTEX.cmake  FindLibXml2.cmake  LibTEXConfig.cmake.in  tex-config.cmake.in
docs/: DOCUMENTATION_EN.md  DOCUMENTATION_FR.md  _config.yml  architecture.dot  build_figure.sh  changelog.md  faq.md  index.md  install.md  samples.md
example/: article_example.cpp  book_example.cpp  index_example.cpp  multilingual_example.cpp  presentation_example.cpp  report_example.cpp
include/: libtex.h  tex.h  texio.h
include/libtex/: algorithm.h  article.h  bibliography.h  book.h  document.h  environment.h  equation.h  errno.h  figure.h  list.h  package.h  presentation.h  report.h  section.h  table.h  template.h  textype.h  texutil.h  theorem.h  type.h  version.h
include/tex/: algorithm.h  article.h  beamer.h  bibliography.h  book.h  document.h  environment.h  equation.h  errno.h  figure.h  language.h  list.h  package.h  presentation.h  report.h  section.h  table.h  template.h  texcolor.h  texerrno.h  texexport.h  textype.h  texutil.h  texversion.h  theorem.h  version.h
include/texio/: algorithm.h  article.h  bibliography.h  core.h  document.h  environment.h  equation.h  errno.h  figure.h  latexgen.h  presentation.h  report.h  section.h  template.h  theorem.h  type.h  version.h
include/texio/common/: document.h  version.h
include/texio/list/: list.h
include/texio/utility/: textype.h
src/: algorithm.c  article.c  beamer.c  bibliography.c  book.c  color_to_string.c  document.c  environment.c  equation.c  figure.c  get_date.c  get_time.c  language.c  latexgen.cpp  list.c  report.c  section.c  table.c  tex_strerr.c  texutil.c  theorem.c  version.c
src/texio/common/: document.c
src/texio/math/: theorem.c
src/texio/utility/: texutil.c
src/unix/: get_username.c  tex_strdup.c
src/win/: get_username.c  tex_strdup.c
test/: document_fs_write_test.c  document_fs_write_test.cc  getusername_test.c  test_document_add_fs_content.c  test_document_api.c  test_document_fs_write.c  test_get_date.c  test_get_time.c  test_get_username.c  tex_get_username_test.c
tools/: tex2pdf.c
